# notebooks

./: data_analysis.ipynb  data_fix.ipynb  model_predicting.ipynb  model_training.ipynb  pyproject.toml  test_data.csv  training_data copy.csv  validation_data.csv  virtual_crossing.csv
hf/: config.json  model.joblib
